[package]
name = "finance"
version = "0.1.0"
authors = ["Brian <henninb@msn.com>"]

[dependencies]
#rocket = "0.3.16"
#rocket_codegen = "0.3.16"
hyper = "0.12.10"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.31"
pretty_env_logger = "0.2.4"
http = "0.1.13"
#uuid = "0.7"
uuid = { version = "0.7", features = ["serde", "v4"] }
chrono = "0.4.6"
#chrono = "0.4"
regex = "1.0.5"
#ncurses = "5.94.0"
#cursive = "0.9.1"
pancurses = "0.16.0"
env_logger = "0.5.13"
reqwest = "0.9.5"